			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03b: *********************************

BUG: (08/05/05, DN) Duplicating export causes exception (Bug #443).
FIX: ElectricObject.uniqueObjectName retries until it obtains Cell.isUniqueName or fail in 100 iterations.
     In Export.newInstance check if uniqueObjectName returns null.

BUG: (08/04/05, DN) Problems with arc head and tail extensions (by Frankie Liu).
FIX: In EditMenu.InsertJogPoint set head and tail extensions.

IMP: (08/02/05, GVG) OpenDialog AWT way on MacOS only when no directories must be available

IMP: (08/01/05, GVG) Calling CheckAndRepair after OptionReconcile dialog and layers switch in the tech.

IMP: (08/01/05, JKG) Modified Output netlisters to get netlist from HierarchyEnumerator so
that the connectivity will be correct for parasistic versus explicit resistors.

BUG: (07/30/05, GVG) Error in Quick.foundSmallSizeDefect() due to rounding errors. Reported by Boz
FIX: DBMath.pointInsideRect() uses isGreaterThan instead of operators. This could slow the code.

IMP: (07/30/05, GVG) Length/width of poly resistors (schematics/layout) can be changed in GetInfoNode
(similar to transistors). Schematic poly resistors display variables. Reported by Boz.

IMP/MAN: (07/29/05, GVG) Ability to check and repair libraries if original files contain
layers that are not in used. Extra function to convert JELIB files into 7Layer tech
by mapping unused layers/primitive nodes into valid ones. Eg. M8M9 -> M6M7, M5M8 -> M5M6.
Done for arcs and nodes.      

BUG: (07/28/05, GVG) GDS number for RPO 29 instead of 155 (reported by JonG)

IMP/MAN: (07/28/05, JKG) Added Include File option to CDL tab (global include file).
    CDL (Spice) netlister now uses CDL_template attributes.

BUG: (07/28/05, JKG) Connecting contacts to contacts/arc in tsmc90 created broken arcs (Reported by Frankie).